# libelkvm

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
cmake/Modules/: Findlibelf.cmake  Findlibudis86.cmake  gmock.cmake  lcov.cmake
examples/: CMakeLists.txt
examples/proxy/: CMakeLists.txt  Makefile  main.cc
examples/strace/: CMakeLists.txt  main.cc
examples/timekeeper/src/: Makefile  main.cc  timekeeper
include/: CMakeLists.txt  Makefile.am  elfloader.h  elkvm-signal.h  elkvm.h  flats.h  gdt.h  heap.h  idt.h  kvm.h  list.h  mapping.h  mem_chunk.h  pager.h  region-c.h  region.h  stack.h  syscall.h  tss.h  vcpu.h  vm.h
include/elkvm/: CMakeLists.txt  config.h.cmake  debug.h  elfloader.h  elkvm-internal.h  elkvm-log.h  elkvm-rlimit.h  elkvm-signal.h  elkvm-udis86.h  elkvm.h  environ.h  gdbstub.h  gdt.h  heap.h  idt.h  interrupt.h  kvm.h  mapping.h  pager-c.h  pager.h  region-c.h  region.h  region_manager.h  regs.h  stack-c.h  stack.h  syscall.h  tss.h  types.h  vcpu.h
res/: entry  entry.S  isr  isr.S  vmxoff.S
share/: CMakeLists.txt  Makefile  entry.S  isr.S  signal.S
src/: CMakeLists.txt  Makefile.am  debug.c  debug.cc  debug.h  elfloader-c.h  elfloader.c  elfloader.cc  elfloader.h  environ-c.h  environ.cc  environ.h  flats.h  gdbstub.c  gdbstub.cc  gdt.c  gdt.cc  heap.c  heap.cc  idt.c  idt.cc  interrupt.cc  kvm.cc  mapping.c  mapping.cc  mprotect.cc  pager.c  pager.cc  region.c  region.cc  region.h  region_manager.cc  signal.c  signal.cc  stack.c  stack.cc  syscall-stubs.cc  syscall.c  syscall.cc  syscall_default.cc  (+17 more)
src/list/: README.md  list.c  test.c
test/: CMakeLists.txt  Makefile.am  a.out  runner.c  test_build.rb  test_elfloader.c  test_elfloader.cc  test_heap.c  test_kvm.c  test_kvm.h  test_mapping.cc  test_pager.c  test_pager.cc  test_pager.h  test_public_interface.cc  test_region.c  test_region.cc  test_region_manager.cc  test_stack.c  test_syscall.c  test_vcpu.c  test_vcpu.cc  test_vcpu.h  test_vm.c  test_vm.h
test.old/: test_gdt.c  test_kvm.h  test_region.c  test_stack.c  test_vm.h
test/integration/: 001-run.exp  002-proxy.exp  003-attach.exp  004-syscalls.exp  hello.attach  hello.static  run_all.sh  syscall_test
test/integration/syscalls/: Makefile  syscalls.c
