PROJECT( libelkvm )
cmake_minimum_required(VERSION 2.8)
option(libelkvm_build_tests "Build all of libelkvm's unit tests." OFF)
option(libelkvm_generate_coverage "Generate coverage information for libelkvm's unit tests" OFF)

include_directories ("${PROJECT_SOURCE_DIR}/include/elkvm" "${PROJECT_SOURCE_DIR}/src" )

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
add_definitions(-Wall -Wextra)
add_definitions(-D_PREFIX_="${CMAKE_INSTALL_PREFIX}")
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules)

if(libelkvm_build_tests)
    enable_testing()
endif()

if(libelkvm_generate_coverage)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fprofile-arcs -ftest-coverage")
    set(CMAKE_EXE_LINKER_FLAGS="${CMAKE_EXE_LINKER_FLAGS} -fprofile-arcs -ftest-coverage -lgcov")
    include(lcov)
endif()

SET( CMAKE_BUILD_TYPE Debug )
# FIND_PACKAGE( check REQUIRED )
# FIND_PACKAGE( udis85 REQUIRED )
find_package(libelf REQUIRED)
add_subdirectory( share )
add_subdirectory( include )
add_subdirectory( src )
add_subdirectory( examples )

if (libelkvm_build_tests)
    include(gmock)
    add_subdirectory( test )
endif()
