libelkvmincludedir = $(includedir)/elkvm

libelkvminclude_HEADERS = elfloader.h\
													elkvm.h\
													gdt.h\
													heap.h\
													kvm.h\
													idt.h\
													list.h\
													mem_chunk.h\
													pager.h\
													region.h\
													stack.h\
													tss.h\
													vcpu.h

