libelkvmincludedir = $(includedir)/elkvm

libelkvminclude_HEADERS = elkvm.h\
													elkvm-signal.h\
													gdt.h\
													heap.h\
													mapping.h\
													kvm.h\
													idt.h\
													list.h\
													mem_chunk.h\
													pager.h\
													region-c.h\
													stack.h\
													tss.h\
													vcpu.h

