AM_CPPFLAGS = -I$(top_srcdir)/include
lib_LTLIBRARIES = libelkvm.la
libelkvm_la_SOURCES = elfloader.c \
											gdt.c\
											heap.c\
											idt.c\
										 	pager.c \
											stack.c \
											syscall.c\
											region.c\
											tss.c\
											vcpu.c \
										 	vm.c
